--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-index.html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width">
+	<title>Calendario CD Rota</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular.min.js"></script>
+</head>
+<body>
+	{{ 3 + 1 }}
+</body>
+</html>
