Estructura básica de nuestra aplicación

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular.min.js"></script>
 </head>
 <body>
-	{{'Otra prueba de cadena'}}
+	<h1>Chipiona CF - CD Rota</h1>
+	<img src="img/chipiona.jpg" /><img src="img/rota.jpg" />
+	<h2>1ª jornada</h2>
+	<ul>
+		<li><strong>Resultado final:</strong> por concretar</li>
+		<li><strong>Goles:</strong> -</li>
+	</ul>
 </body>
 </html>
