--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="calendario"><!-- Aquí debemos referenciar el nombre de nuestro módulo -->
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 	<title>Calendario CD Rota</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular.min.js"></script>
+	<script src="js/app.js"></script>
 </head>
 <body>
-	<h1>Chipiona CF - CD Rota</h1>
-	<img src="img/chipiona.jpg" /><img src="img/rota.jpg" />
-	<h2>1ª jornada</h2>
-	<ul>
-		<li><strong>Resultado final:</strong> por concretar</li>
-		<li><strong>Goles:</strong> -</li>
-	</ul>
+	<div ng-controller="EquiposController as equiposCtrl"><!-- Indicamos mediante una directiva que controlador vamos a usar -->
+		<h1>{{equiposCtrl.equipos.equipoLocal}} - {{equiposCtrl.equipos.equipoVisitante}}</h1>
+		<img src="img/{{equiposCtrl.equipos.equipoLocal}}.jpg" height="180" /><img src="img/{{equiposCtrl.equipos.equipoVisitante}}.jpg" height="200" />
+		<h2>{{equiposCtrl.equipos.jornada}}ª jornada</h2>
+		<ul>
+			<li><strong>Resultado final:</strong> {{equiposCtrl.equipos.resultado}}</li>
+			<li><strong>Goles:</strong> {{equiposCtrl.equipos.goles.join(', ')}}</li><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
+		</ul>
+	</div>
 </body>
 </html>
