--- a/public/index.html
+++ b/public/index.html
@@ -36,22 +36,36 @@
 				</div>
 				<div class="col-md-6">
 					<ul class="nav nav-tabs nav-justified">
-				        <li class="active"><a href>Resultado</a></li>
-				        <li><a href>Goles</a></li>
+				        <li ng-class="{ active : tab === 1 }"><a ng-click="tab = 1" href="#">Resultado</a></li>
+				        <li ng-class="{ active : tab === 2 }"><a ng-click="tab = 2" href="#">Goles</a></li>
+				        <li ng-class="{ active : tab === 3 }"><a ng-click="tab = 3" href="#">Ejemplo</a></li>
 				    </ul>
-				    <div class="tab-content">
-				    	<div>
+				    <div ng-init="tab = 1" class="tab-content">
+				    	<!-- Resultado -->
+				    	<div ng-show="tab === 1">
 					    	<ul class="list-group">
 								<li class="list-group-item"><strong>Resultado final:</strong> {{equiposCtrl.equipos.resultado}}</li>
 								<!--<li class="list-group-item"><strong>Goles:</strong> {{equiposCtrl.equipos.goles.join(', ')}}</li>--><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
 							</ul>
 						</div>
-				    </div>
-				    <div class="tab-content">
-				    	<div>
+						<!-- Goles -->
+						<div ng-show="tab === 2">
 					    	<ul class="list-group">
 								<li class="list-group-item"><strong>Goles:</strong> <span ng-repeat="goles in equiposCtrl.equipos.goles" class="label label-primary">{{goles}}</span></li><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
 							</ul>
+						</div>
+						<!-- Ejemplo -->
+						<div ng-show="tab === 3">
+							<div class="text-center" ng-repeat="balones in equiposCtrl.equipos.ejemplo">
+								<a href="#">
+									<img src="img/logo.png">
+									<p>
+										<strong>{{balones}}</strong>
+									</p>
+								</a>
+								<span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
+								<!-- La directiva ng-hide="$last" nos indica que la última flecha hacia abajo no se va a mostrar -->
+							</div>
 						</div>
 				    </div>
 				</div>
