--- a/public/index.html
+++ b/public/index.html
@@ -34,28 +34,28 @@
 				<div class="col-md-6">
 					<img class="escudo left-block" ng-src="img/{{equiposCtrl.equipos.equipoLocal | lowercase}}.jpg" height="180" /><img class="escudo right-block" ng-src="img/{{equiposCtrl.equipos.equipoVisitante | lowercase}}.jpg" height="200" />
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6" ng-controller="TabsController as tabs">
 					<ul class="nav nav-tabs nav-justified">
-				        <li ng-class="{ active : tab === 1 }"><a ng-click="tab = 1" href="#">Resultado</a></li>
-				        <li ng-class="{ active : tab === 2 }"><a ng-click="tab = 2" href="#">Goles</a></li>
-				        <li ng-class="{ active : tab === 3 }"><a ng-click="tab = 3" href="#">Ejemplo</a></li>
+				        <li ng-class="{ active : tabs.tab === 1 }"><a ng-click="tabs.selectTab(1)" href="#">Resultado</a></li>
+				        <li ng-class="{ active : tabs.tab === 2 }"><a ng-click="tabs.selectTab(2)" href="#">Goles</a></li>
+				        <li ng-class="{ active : tabs.tab === 3 }"><a ng-click="tabs.selectTab(3)" href="#">Ejemplo</a></li>
 				    </ul>
-				    <div ng-init="tab = 1" class="tab-content">
+				    <div class="tab-content">
 				    	<!-- Resultado -->
-				    	<div ng-show="tab === 1">
+				    	<div ng-show="tabs.tab === 1">
 					    	<ul class="list-group">
 								<li class="list-group-item"><strong>Resultado final:</strong> {{equiposCtrl.equipos.resultado}}</li>
 								<!--<li class="list-group-item"><strong>Goles:</strong> {{equiposCtrl.equipos.goles.join(', ')}}</li>--><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
 							</ul>
 						</div>
 						<!-- Goles -->
-						<div ng-show="tab === 2">
+						<div ng-show="tabs.tab === 2">
 					    	<ul class="list-group">
 								<li class="list-group-item"><strong>Goles:</strong> <span ng-repeat="goles in equiposCtrl.equipos.goles" class="label label-primary">{{goles}}</span></li><!-- La función join que tenemos declarada, nos devuelve los elementos del array separados por coma -->
 							</ul>
 						</div>
 						<!-- Ejemplo -->
-						<div ng-show="tab === 3">
+						<div ng-show="tabs.tab === 3">
 							<div class="text-center" ng-repeat="balones in equiposCtrl.equipos.ejemplo">
 								<a href="#">
 									<img src="img/logo.png">
