Implementación de modelos en la vista y el uso de ng-if con anonymous

--- a/public/index.html
+++ b/public/index.html
@@ -81,12 +81,12 @@
 				    <form name="commentsForm" class="form-horizontal" role="form" novalidate>
 				      <div class="form-group">
 				        <div class="col-sm-6">
-				          <textarea placeholder="Por favor díganos que piensa del partido -" class="form-control" required></textarea>
+				          <textarea ng-model="comment.body" placeholder="Por favor díganos que piensa del partido -" class="form-control" required></textarea>
 				        </div>
 				        <div class="col-sm-4">
-				          <input  type="email" placeholder="Introduzca su email" class="form-control">
+				          <input ng-model="comment.email" ng-disabled="comment.anonymous" type="email" placeholder="Introduzca su email" class="form-control">
 				          <label>
-				            <input type="checkbox">
+				            <input ng-model="comment.anonymous" type="checkbox">
 				            Anónimo
 				          </label>
 				        </div>
@@ -96,11 +96,11 @@
 				      </div>
 				    </form>
 				    <blockquote>
-				      <p>Ejemplo de comentario</p>
+				      <p>{{comment.body}}</p>
 				      <footer>
 				        Comentado por 
-				        <a href="#"></a> 
-				        <em>Anónimo</em>
+				        <a ng-if="!comment.anonymous" href="mailto:{{comment.email}}">{{comment.email}}</a> 
+				        <em ng-if="comment.anonymous">Anónimo</em>
 				        el <span>fecha</span>
 				      </footer>
 				    </blockquote>
