--- a/public/index.html
+++ b/public/index.html
@@ -78,13 +78,13 @@
 				    <h1 class="panel-title">Comentarios <button ng-click="cmtsCtrl.toggle()" class="close pull-right">&times;</button></h1>
 				  </div>
 				  <div class="panel-body">
-				    <form name="commentsForm" class="form-horizontal" role="form" ng-submit="cmtsCtrl.addComment()" novalidate>
+				    <form name="commentsForm" class="form-horizontal" role="form" ng-submit="commentsForm.$valid && cmtsCtrl.addComment()" novalidate>
 				      <div class="form-group">
 				        <div class="col-sm-6">
-				          <textarea ng-model="cmtsCtrl.comment.body" placeholder="Por favor díganos que piensa del partido -" class="form-control" required></textarea>
+				          <textarea ng-model="cmtsCtrl.comment.body" placeholder="Por favor díganos que piensa del partido {{equiposCtrl.equipos.equipoLocal}} - {{equiposCtrl.equipos.equipoVisitante}}" class="form-control" required></textarea>
 				        </div>
 				        <div class="col-sm-4">
-				          <input ng-model="cmtsCtrl.comment.email" ng-disabled="cmtsCtrl.comment.anonymous" type="email" placeholder="Introduzca su email" class="form-control">
+				          <input ng-model="cmtsCtrl.comment.email" ng-disabled="cmtsCtrl.comment.anonymous" type="email" placeholder="Introduzca su email" class="form-control" ng-required="!cmtsCtrl.comment.anonymous">
 				          <label>
 				            <input ng-model="cmtsCtrl.comment.anonymous" ng-change="cmtsCtrl.anonymousChanged()" type="checkbox">
 				            Anónimo
@@ -95,6 +95,7 @@
 				        </div>
 				      </div>
 				    </form>
+				    <div ng-if="!commentsForm.$valid" class="alert alert-danger">Formulario inválido</div>
 				    <blockquote ng-repeat="comment in cmtsCtrl.comments">
 				      <p>{{comment.body}}</p>
 				      <footer>
