--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
 	<!-- scripts -->
 	<script src="js/angular.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
 	<!-- /.scripts -->
 </body>
 </html>
