--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,8 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
+	<script src="js/directives.js"></script>
+	<script src="js/filters.js"></script>
 	<!-- /.scripts -->
 </body>
 </html>
