Añadimos ngRoute y rutas básicas para cargar los partidos

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
 		<div ng-view></div>
 	</div><!-- /.container -->
 	<!-- scripts -->
-	<script src="js/angular.min.js"></script>
+	<script src="js/lib/angular.min.js"></script>
+	<script src="js/lib/angular-route.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/directives.js"></script>
