--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 	<script src="js/controllers.js"></script>
 	<script src="js/directives.js"></script>
 	<script src="js/filters.js"></script>
+	<script src="js/services.js"></script>
 	<!-- /.scripts -->
 </body>
 </html>
